--- a/deps/rabbitmq_management_agent/BUILD.bazel
+++ b/deps/rabbitmq_management_agent/BUILD.bazel
@@ -34,20 +34,6 @@ APP_DESCRIPTION = "RabbitMQ Management Agent"
 
 APP_MODULE = "rabbit_mgmt_agent_app"
 
-EXTRA_APPS = [
-    "xmerl",
-    "mnesia",
-    "ranch",
-    "ssl",
-    "crypto",
-    "public_key",
-]
-
-DEPS = [
-    "//deps/rabbit_common:erlang_app",
-    "//deps/rabbit:erlang_app",
-]
-
 all_beam_files(name = "all_beam_files")
 
 all_test_beam_files(name = "all_test_beam_files")
@@ -98,20 +84,17 @@ xref(
     target = ":erlang_app",
 )
 
-plt_apps = list(EXTRA_APPS)
-
-plt_apps.remove("ranch")
-
 plt(
-    name = "base_plt",
-    apps = plt_apps,
+    name = "deps_plt",
+    for_target = ":erlang_app",
     plt = "//:base_plt",
-    deps = DEPS,
 )
 
 dialyze(
+    name = "dialyze",
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS + ["-Wno_undefined_callbacks"],
-    plt = ":base_plt",
+    plt = ":deps_plt",
+    target = ":erlang_app",
     warnings_as_errors = False,
 )
 
