--- a/deps/rabbitmq_ct_client_helpers/BUILD.bazel
+++ b/deps/rabbitmq_ct_client_helpers/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@rules_erlang//:dialyze.bzl", "dialyze", "plt")
 load("@rules_erlang//:xref2.bzl", "xref")
 load(
     "//:rabbitmq.bzl",
@@ -35,8 +36,6 @@ alias(
     visibility = ["//visibility:public"],
 )
 
-assert_suites()
-
 xref(
     name = "xref",
     additional_libs = [
@@ -45,3 +44,17 @@ xref(
     ],
     target = ":erlang_app",
 )
+
+plt(
+    name = "deps_plt",
+    for_target = ":erlang_app",
+    plt = "//:base_plt",
+)
+
+dialyze(
+    name = "dialyze",
+    plt = ":deps_plt",
+    target = ":erlang_app",
+)
+
+assert_suites()
