--- a/deps/rabbitmq_management/BUILD.bazel
+++ b/deps/rabbitmq_management/BUILD.bazel
@@ -26,14 +26,6 @@ APP_DESCRIPTION = "RabbitMQ Management Console"
 
 APP_MODULE = "rabbit_mgmt_app"
 
-EXTRA_APPS = [
-    "mnesia",
-    "ranch",
-    "ssl",
-    "crypto",
-    "public_key",
-]
-
 APP_ENV = """[
 	    {http_log_dir,      none},
 	    {load_definitions,  none},
@@ -45,19 +37,6 @@ APP_ENV = """[
 	    {cors_max_age, 1800},
 	    {content_security_policy, "script-src 'self' 'unsafe-eval' 'unsafe-inline'; object-src 'self'"}
 	  ]"""
-
-DEPS = [
-    "//deps/amqp_client:erlang_app",
-    "//deps/rabbit_common:erlang_app",
-    "//deps/rabbit:erlang_app",
-    "//deps/rabbitmq_management_agent:erlang_app",
-]
-
-RUNTIME_DEPS = [
-    "//deps/rabbitmq_web_dispatch:erlang_app",
-    "@cowboy//:erlang_app",
-    "@cowlib//:erlang_app",
-]
 
 genrule(
     name = "rabbitmqadmin",
@@ -128,13 +107,16 @@ xref(
 )
 
 plt(
-    name = "base_plt",
-    deps = DEPS,
+    name = "deps_plt",
+    for_target = ":erlang_app",
+    plt = "//:base_plt",
 )
 
 dialyze(
+    name = "dialyze",
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
-    plt = ":base_plt",
+    plt = ":deps_plt",
+    target = ":erlang_app",
     warnings_as_errors = False,
 )
 
