--- a/deps/rabbitmq_peer_discovery_aws/BUILD.bazel
+++ b/deps/rabbitmq_peer_discovery_aws/BUILD.bazel
@@ -22,20 +22,6 @@ APP_NAME = "rabbitmq_peer_discovery_aws"
 
 APP_DESCRIPTION = "AWS-based RabbitMQ peer discovery backend"
 
-EXTRA_APPS = [
-    "inets",
-]
-
-DEPS = [
-    "//deps/rabbit_common:erlang_app",
-    "//deps/rabbitmq_peer_discovery_common:erlang_app",
-]
-
-RUNTIME_DEPS = [
-    "//deps/rabbitmq_aws:erlang_app",
-    "//deps/rabbit:erlang_app",
-]
-
 all_beam_files(name = "all_beam_files")
 
 all_test_beam_files(name = "all_test_beam_files")
@@ -72,15 +58,16 @@ xref(
 )
 
 plt(
-    name = "base_plt",
-    apps = EXTRA_APPS,
+    name = "deps_plt",
+    for_target = ":erlang_app",
     plt = "//:base_plt",
-    deps = DEPS,
 )
 
 dialyze(
+    name = "dialyze",
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
-    plt = ":base_plt",
+    plt = ":deps_plt",
+    target = ":erlang_app",
     warnings_as_errors = False,
 )
 
