--- a/deps/rabbitmq_stream/BUILD.bazel
+++ b/deps/rabbitmq_stream/BUILD.bazel
@@ -8,7 +8,6 @@ load(
     "broker_for_integration_suites",
     "rabbitmq_app",
     "rabbitmq_integration_suite",
-    "without",
 )
 load(
     ":app.bzl",
@@ -39,17 +38,6 @@ APP_ENV = """[
 	{advertised_host, undefined},
 	{advertised_port, undefined}
 ]"""
-
-BUILD_DEPS = [
-    "//deps/rabbit_common:erlang_app",
-    "//deps/rabbitmq_cli:rabbitmqctl",
-    "@ranch//:erlang_app",
-]
-
-DEPS = [
-    "//deps/rabbitmq_stream_common:erlang_app",
-    "//deps/rabbit:erlang_app",
-]
 
 all_beam_files(name = "all_beam_files")
 
@@ -86,16 +74,16 @@ xref(
 )
 
 plt(
-    name = "base_plt",
-    deps = without(
-        "//deps/rabbitmq_cli:rabbitmqctl",
-        BUILD_DEPS + DEPS,
-    ),
+    name = "deps_plt",
+    for_target = ":erlang_app",
+    plt = "//:base_plt",
 )
 
 dialyze(
+    name = "dialyze",
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS + ["-Wno_undefined_callbacks"],
-    plt = ":base_plt",
+    plt = ":deps_plt",
+    target = ":erlang_app",
     warnings_as_errors = False,
 )
 
