--- a/deps/rabbitmq_top/BUILD.bazel
+++ b/deps/rabbitmq_top/BUILD.bazel
@@ -23,20 +23,6 @@ APP_DESCRIPTION = "RabbitMQ Top"
 
 APP_MODULE = "rabbit_top_app"
 
-BUILD_DEPS = [
-    "//deps/rabbitmq_management_agent:erlang_app",
-]
-
-DEPS = [
-    "//deps/amqp_client:erlang_app",
-    "//deps/rabbit_common:erlang_app",
-    "//deps/rabbitmq_management:erlang_app",
-]
-
-RUNTIME_DEPS = [
-    "//deps/rabbit:erlang_app",
-]
-
 all_beam_files(name = "all_beam_files")
 
 all_test_beam_files(name = "all_test_beam_files")
@@ -72,13 +58,16 @@ xref(
 )
 
 plt(
-    name = "base_plt",
-    deps = BUILD_DEPS + DEPS,
+    name = "deps_plt",
+    for_target = ":erlang_app",
+    plt = "//:base_plt",
 )
 
 dialyze(
+    name = "dialyze",
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
-    plt = ":base_plt",
+    plt = ":deps_plt",
+    target = ":erlang_app",
 )
 
 alias(
