--- a/deps/rabbitmq_web_dispatch/BUILD.bazel
+++ b/deps/rabbitmq_web_dispatch/BUILD.bazel
@@ -27,16 +27,6 @@ APP_DESCRIPTION = "RabbitMQ Web Dispatcher"
 
 APP_MODULE = "rabbit_web_dispatch_app"
 
-EXTRA_APPS = [
-    "inets",
-]
-
-DEPS = [
-    "//deps/rabbit:erlang_app",
-    "//deps/rabbit_common:erlang_app",
-    "@cowboy//:erlang_app",
-]
-
 all_beam_files(name = "all_beam_files")
 
 all_test_beam_files(name = "all_test_beam_files")
@@ -74,15 +64,16 @@ xref(
 )
 
 plt(
-    name = "base_plt",
-    apps = EXTRA_APPS,
+    name = "deps_plt",
+    for_target = ":erlang_app",
     plt = "//:base_plt",
-    deps = DEPS,
 )
 
 dialyze(
+    name = "dialyze",
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
-    plt = ":base_plt",
+    plt = ":deps_plt",
+    target = ":erlang_app",
     warnings_as_errors = False,
 )
 
