--- a/deps/rabbitmq_web_mqtt/BUILD.bazel
+++ b/deps/rabbitmq_web_mqtt/BUILD.bazel
@@ -34,21 +34,6 @@ APP_ENV = """[
 	    {proxy_protocol, false}
 	  ]"""
 
-BUILD_DEPS = [
-    "//deps/amqp_client:erlang_app",
-    "@ranch//:erlang_app",
-]
-
-DEPS = [
-    "//deps/rabbit_common:erlang_app",
-    "@cowboy//:erlang_app",
-]
-
-RUNTIME_DEPS = [
-    "//deps/rabbit:erlang_app",
-    "//deps/rabbitmq_mqtt:erlang_app",
-]
-
 all_beam_files(name = "all_beam_files")
 
 all_test_beam_files(name = "all_test_beam_files")
@@ -84,13 +69,16 @@ xref(
 )
 
 plt(
-    name = "base_plt",
-    deps = BUILD_DEPS + DEPS,
+    name = "deps_plt",
+    for_target = ":erlang_app",
+    plt = "//:base_plt",
 )
 
 dialyze(
+    name = "dialyze",
     dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
-    plt = ":base_plt",
+    plt = ":deps_plt",
+    target = ":erlang_app",
     warnings_as_errors = False,
 )
 
