--- a/deps/rabbitmq_web_mqtt_examples/BUILD.bazel
+++ b/deps/rabbitmq_web_mqtt_examples/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_erlang//:xref2.bzl", "xref")
-load("@rules_erlang//:dialyze.bzl", "dialyze")
+load("@rules_erlang//:dialyze.bzl", "dialyze", "plt")
 load(
     "//:rabbitmq.bzl",
     "RABBITMQ_DIALYZER_OPTS",
@@ -25,13 +25,6 @@ APP_MODULE = "rabbit_web_mqtt_examples_app"
 APP_ENV = """[
 	    {listener, [{port, 15670}]}
 	  ]"""
-
-RUNTIME_DEPS = [
-    "//deps/rabbit_common:erlang_app",
-    "//deps/rabbit:erlang_app",
-    "//deps/rabbitmq_web_dispatch:erlang_app",
-    "//deps/rabbitmq_web_mqtt:erlang_app",
-]
 
 all_beam_files(name = "all_beam_files")
 
@@ -67,9 +60,17 @@ xref(
     target = ":erlang_app",
 )
 
-dialyze(
-    dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
+plt(
+    name = "deps_plt",
+    for_target = ":erlang_app",
     plt = "//:base_plt",
+)
+
+dialyze(
+    name = "dialyze",
+    dialyzer_opts = RABBITMQ_DIALYZER_OPTS,
+    plt = ":deps_plt",
+    target = ":erlang_app",
 )
 
 alias(
