--- a/deps/rabbit/test/feature_flags_SUITE_data/my_plugin/BUILD.bazel
+++ b/deps/rabbit/test/feature_flags_SUITE_data/my_plugin/BUILD.bazel
@@ -15,6 +15,7 @@ erlang_bytecode(
     name = "ebin_my_plugin_beam",
     srcs = ["src/my_plugin.erl"],
     outs = ["ebin/my_plugin.beam"],
+    app_name = "my_plugin",
     erlc_opts = "//:erlc_opts",
 )
 
@@ -23,6 +24,7 @@ erlang_bytecode(
     testonly = True,
     srcs = ["src/my_plugin.erl"],
     outs = ["test/my_plugin.beam"],
+    app_name = "my_plugin",
     erlc_opts = "//:test_erlc_opts",
 )
 
