--- a/deps/rabbit/BUILD.bazel
+++ b/deps/rabbit/BUILD.bazel
@@ -173,7 +173,6 @@ test_suite_beam_files(name = "test_suite_beam_files")
 # gazelle:erlang_app_extra_app ssl
 # gazelle:erlang_app_extra_app syntax_tools
 # gazelle:erlang_app_extra_app xmerl
-# gazelle:erlang_app_extra_app mnesia
 
 # gazelle:erlang_app_dep amqp10_common
 # gazelle:erlang_app_dep rabbit_common
@@ -209,7 +208,6 @@ rabbitmq_app(
         "ssl",
         "syntax_tools",
         "xmerl",
-        "mnesia",
     ],
     deps = [
         "//deps/amqp10_common:erlang_app",
@@ -237,6 +235,9 @@ xref(
 
 plt(
     name = "deps_plt",
+    apps = [
+        "mnesia",  # keep
+    ],
     for_target = ":erlang_app",
     plt = "//:base_plt",
 )
